src/objects/Respondent__c.object
<CustomObject>
    <fields>
        <fullName>Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipLabel>Respondents</relationshipLabel>
        <relationshipName>Respondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respondent_Received__c</fullName>
        <label>Respondent Received</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Injunction</fullName>
                </value>
                <value>
                    <fullName>Litigation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Respondent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Respondent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Respondents</relationshipLabel>
        <relationshipName>Respondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Respondents</relationshipLabel>
        <relationshipName>Respondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Respondent__c</fullName>
        <label>Type of Respondent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Review Request/Separate Rate</fullName>
                </value>
                <value>
                    <fullName>All Other/Country-Wide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Response__c</fullName>
        <label>Type of Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>No Shipments</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Respondent</label>
    <nameField>
        <label>Respondent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Respondents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>